--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "pb-astro",
+  "name": "astro-pb-client",
   "type": "module",
-  "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^5.13.3"
+    "astro": "^4.12.0",
+    "po": "^4.5.2",
+    "pocketbase": "^0.21.5"
   }
 }
