--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^4.12.0",
+    "astro": "^4.16.19",
     "po": "^4.5.2",
-    "pocketbase": "^0.21.5"
+    "vite": "^7.1.3"
+  },
+  "devDependencies": {
+    "vite-plugin-static-copy": "^3.1.2"
   }
 }
