--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "astro preview"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^6.0.2",
     "astro": "^4.16.19",
     "po": "^4.5.2",
+    "tailwindcss": "^3.4.17",
     "vite": "^7.1.3"
   },
   "devDependencies": {
