--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22010
-        source: "dist/*"
+        source: ".astro/*"
         target: "/var/www/authentification/pb_public"
         strip_components: 1
         rm: true
